--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!--Header-->
     <header>
         <nav class="navbar container">
-            <div class="navbar-logo">logo</div>
-            <div class="navbar-menu">link link link link link</div>
-            <div class="navbar-action">login</div>
+            <div class="navbar-logo layout">logo</div>
+            <div class="navbar-menu layout">link link link link link</div>
+            <div class="navbar-action layout">login</div>
         </nav>
 
         <!--Hero-->
