--- a/index.html
+++ b/index.html
@@ -44,13 +44,22 @@
             <div class="col-s"></div>
         </section>
         
-        <section class="bg-gray"></section>
+        <section class="bg-gray">
         <div class="container flex">
-            <div class="col-l"></div>
-            <div class="col-s"></div>
+            <div class="col-full"></div>
         </div>
         </section>
-        
     </main>
+
+    <!--footer-->
+    <footer>
+        <div class="container">
+            <div class="footer-top flex">
+                <div class="footer-left border"></div>
+                <div class="footer-right"></div>
+            </div>
+            <div class="footer-bottom"></div>
+        </div>
+    </footer>
 </body>
 </html>
