--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!--Header-->
     <header>
         <nav class="navbar container">
-            <div class="navbar-logo layout">logo</div>
-            <div class="navbar-menu layout">link link link link link</div>
-            <div class="navbar-action layout">login</div>
+            <div class="navbar-logo layout">Logo</div>
+            <div class="navbar-menu layout">Link Link Link Link Link</div>
+            <div class="navbar-action layout">Login</div>
         </nav>
 
         <!--Hero-->
@@ -51,15 +51,27 @@
         </section>
     </main>
 
-    <!--footer-->
+    <!--Footer-->
     <footer>
         <div class="container">
             <div class="footer-top flex">
                 <div class="footer-left border"></div>
-                <div class="footer-right"></div>
+                <div class="footer-right">
+                    <nav class="footer-nav">
+                        <dic class="col-nav border"></dic>
+                        <dic class="col-nav border"></dic>
+                        <dic class="col-nav border"></dic>
+                        <dic class="col-nav border"></dic>
+
+                    </nav>
+                </div>
             </div>
-            <div class="footer-bottom"></div>
+            <div class="footer-bottom border">
+                <div>Logo</div>
+                <div>Bottone</div>  
+            </div>
         </div>
     </footer>
+        
 </body>
 </html>
